# PSAS-Capstone

./: .gitignore  .travis.yml  Calandar.md  Calendar.md  README.md  RiskManagement.md  new_file.txt  psas_meetings_agenda.txt  schedule.md  testingfile.txt  work_breakdown_list.md  work_breakdown_list.txt
docs/: Architecture.md  Design.md
documents/: Architecture.md  Design.md  RiskManagement.md  requirements_architecture_notes.txt  spring_presentation.md  work_breakdown_structure.md
flight_controller_psas/: Cargo.toml
flight_controller_psas/src/: control_interface.rs  control_module.rs  data_formatter.rs  embedded.rs  jsbsim.rs  lib.rs  main.rs  sensor_interface.rs  sensor_module.rs
meeting_notes/: requirements_architecture
src/: README
src/common/: Pin_Config.xml  config_reader.rs  control.rs  data_fmt.rs  main.rs  sensor.rs
src/flight_mode/: .gitignore  Cargo.toml
src/flight_mode/src/: gpio.rs  i2c.rs  lib.rs
src/test_mode/: Cargo.toml  build.rs  readme.md  run.xml
src/test_mode/jsbsim/: run.xml
src/test_mode/jsbsim/aircraft/ledcraft/: ledcraft.xml  ledinit.xml
src/test_mode/jsbsim/aircraft/ledjets/: ledjets.xml
src/test_mode/jsbsim/scripts/: testjets.xml  testleds.xml
src/test_mode/jsbsim/testlogs/: testlog.txt
src/test_mode/src/: CMakeLists.txt  JSBSimWrapper.cpp  JSBSimWrapper.h  binder.rs  gpio.rs  i2c.rs  lib.rs  wrapper.c  wrapper.cpp  wrapper.h  wrapper.rs
