[package]
name = "test_mode"
version = "0.1.0"
authors = ["RCS team <us@pdx.com>"]
build = "build.rs"

[build-dependencies]
cmake = "0.1"

[[bin]]
name = "rcs_sw"
path = "../common/main.rs"

[lib]
name = "libs"
path = "src/lib.rs"

[dependencies]
timer = "0.1.6"
libc = "0.2"
time = "0.1"
byteorder = "0.5"
