CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(psas-simulator)

ADD_LIBRARY(wrapper STATIC
	wrapper.cpp
	wrapper.h
)

SET(CXX_STDLIB_INCLUDE_DIR /usr/include/c++/5)

# This is the default location of a JSBSim installation with shared libraries built
SET(JSBSIM_LIBRARY_DIR /usr/local/lib)
SET(JSBSIM_LIBRARY JSBSim)
SET(JSBSIM_INCLUDE_DIR /usr/local/include/JSBSim)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CXX_STDLIB_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${JSBSIM_INCLUDE_DIR})
LINK_DIRECTORIES(${JSBSIM_LIBRARY_DIR})

TARGET_LINK_LIBRARIES(wrapper ${JSBSIM_LIBRARY})
INSTALL(TARGETS wrapper DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
